--- a/assests/css/estilo.css
+++ b/assests/css/estilo.css
@@ -1,5 +1,7 @@
 body{
     margin: 15px 20px;
+    color: #717171;
+    font-family: Helvetica;
 }
 
 header{
@@ -8,12 +10,22 @@ header{
     position: fixed;
     top: 0px;
     left: 0px;
-    padding: 10px 10px;
+    padding: 30px 50px;
+}
+
+a{
+    text-decoration: none;
+    color: #717171;
+}
+
+a:hover{
+    color: red;
 }
 
 .cabecalho1{
     display: flex;
     justify-content: space-between;
+    margin-bottom: 15px;
 }
 
 .cabecalho1 .figure_cabecalho1 img{
@@ -24,7 +36,8 @@ header{
 .cabecalho1 ul {
     display: flex;
     justify-content: space-evenly;
-    gap: 10px
+    gap: 20px;
+    margin-left: -150px;
 }
 
 .endereco {
@@ -32,3 +45,68 @@ header{
     justify-content: space-evenly;
     gap: 10px
 }
+
+.cabecalho2 ul{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.cabecalho2 button {
+    cursor: pointer;
+    border-radius: 16px;
+    border: 1px solid #dcdcdc;
+    height: 32px;
+    width: 150px;
+    text-align: center;
+    margin-top: 15px;
+    padding: 5px 5px;
+    background: #fff;
+    color: #717171;
+}
+
+.cabecalho2 button:hover {
+    background: #f8f8f8;
+}
+
+.lista_opcoes{
+    margin-top: 150px;
+}
+
+.lista_opcoes ul{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.lista_opcoes ul li{
+    text-align: center;
+    cursor: pointer;
+}
+
+.lista_opcoes ul li img{
+    height: 100px;
+    width: 130px;
+}
+
+.lista_opcoes ul li img:hover{
+    scale: 105%;
+}
+
+.banners ul{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.banners ul li img{
+    height: 500px;
+    width: 1000px;
+    padding-right: 10px;
+}
+
+.banners{
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
